# OksEngine

./: .context  .gitignore  CMakeLists.txt  Main.cpp  README.md  build.bat  build_all.bat  build_and_test.bat  build_engine.bat  config.lua  count_ecs_lines.sh  generateBuildFiles.bat  tests.bat
Sources/: CMakeLists.txt  main.cpp
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  OksEngine.Components.hpp  OksEngine.Config.hpp  OksEngine.Context.cpp  OksEngine.Context.hpp  OksEngine.ECS.Component.hpp  OksEngine.ECS.System.hpp  OksEngine.Entity.cpp  OksEngine.Entity.hpp  OksEngine.Physics.Subsystem.cpp  OksEngine.Physics.Subsystem.hpp  OksEngine.Render.Subsystem.cpp  OksEngine.Render.Subsystem.hpp  OksEngine.Resource.Subsystem.hpp  OksEngine.Storage.hpp  OksEngine.Subsystem.hpp  OksEngine.Systems.hpp  OksEngine.TaskSystem.hpp  OksEngine.TaskSystem.hpp.bak  OksEngine.UI.Subsystem.cpp  OksEngine.UI.Subsystem.hpp
Sources/Engine/Behaviour/: OksEngine.Behaviour.Components.hpp  OksEngine.Behaviour.Systems.hpp  OksEngine.Behaviour.cpp  OksEngine.Behaviour.hpp  OksEngine.CallInputProcessor.cpp  OksEngine.CallInputProcessor.hpp  OksEngine.CallUpdateMethod.hpp  OksEngine.CreateLoadLuaScriptRequest.cpp  OksEngine.CreateLuaContext.cpp  OksEngine.CreateLuaContext.hpp  OksEngine.LoadLuaScript.cpp  OksEngine.LoadLuaScript.hpp  OksEngine.LuaContext.cpp  OksEngine.LuaEntity.cpp  OksEngine.LuaEntity.hpp  OksEngine.LuaScript.cpp  OksEngine.LuaScript.hpp  OksEngine.LuaScriptEntity.hpp  OksEngine.LuaScriptLoadRequest.cpp  OksEngine.LuaScriptLoadRequest.hpp
Sources/Engine/Common/: CMakeLists.txt  Common.DataStructures.Graph.hpp  Common.DataStructures.Vector.hpp  Common.DataStructures.hpp  Common.Exception.hpp  Common.Format.cpp  Common.Format.hpp  Common.Identifier.hpp  Common.Memory.Allocator.hpp  Common.Memory.BlockAllocator.hpp  Common.Memory.Concepts.hpp  Common.Memory.Exception.hpp  Common.Memory.MemoryControlBlock.hpp  Common.Memory.PoolAllocator.hpp  Common.Memory.RefsCounter.hpp  Common.Memory.SharedPointer.hpp  Common.Memory.hpp  Common.MemoryManager.hpp  Common.Types.hpp  Common.VersionedMap.hpp  Common.hpp  OksEngine.ActiveMarker.hpp  OksEngine.ChildEntity.hpp  OksEngine.Common.Components.hpp  OksEngine.Common.Systems.hpp  OksEngine.DebugInfo.hpp  OksEngine.Engine.System.hpp  OksEngine.FramesCounter.hpp  OksEngine.Log.Subsystem.hpp  OksEngine.MapRigidBodyToRenderGeometry.hpp  OksEngine.Name.hpp  OksEngine.Position.hpp  OksEngine.RigidBodyToRenderGeometryMapper.cpp  OksEngine.RigidBodyToRenderGeometryMapper.hpp  OksEngine.StringsArray.hpp  OksEngine.Text.hpp
Sources/Engine/Components/: OksEngine.AttachedCamera.hpp  OksEngine.Behaviour.cpp  OksEngine.Behaviour.hpp  OksEngine.Camera.cpp  OksEngine.Camera.hpp  OksEngine.ImmutableRenderGeometry.hpp  OksEngine.Light.hpp  OksEngine.MapRigidBodyToRenderGeometry.hpp  OksEngine.Position.hpp  OksEngine.RenderableGeometry.cpp  OksEngine.RenderableGeometry.hpp  OksEngine.RigidBody.Capsule.hpp  OksEngine.RigidBody.hpp  OksEngine.SkinnedGeometry.hpp
Sources/Engine/Datastructures/: CMakeLists.txt
Sources/Engine/Debug/: OksEngine.AddECSInspectorMainMenuItem.cpp  OksEngine.AddECSInspectorMainMenuItem.hpp  OksEngine.CollectECSSystemsCallsInfo.cpp  OksEngine.CollectECSSystemsCallsInfo.hpp  OksEngine.CollectEntitiesInfo.cpp  OksEngine.CollectEntitiesInfo.hpp  OksEngine.CreateImGuiTexture.hpp  OksEngine.Debug.Components.hpp  OksEngine.Debug.Subsystem.cpp  OksEngine.Debug.Subsystem.hpp  OksEngine.Debug.Systems.hpp  OksEngine.DebugInfo.hpp  OksEngine.DebugUI.System.cpp  OksEngine.DebugUI.System.hpp  OksEngine.ECSInspector.hpp  OksEngine.EnginePerformance.hpp  OksEngine.FramesCounter.hpp  OksEngine.ImGuiState.hpp  OksEngine.MainMenuBar.cpp  OksEngine.MainMenuBar.hpp  OksEngine.RenderImGuiUI.cpp  OksEngine.RenderImGuiUI.hpp  OksEngine.UpdateEnginePerformance.cpp  OksEngine.UpdateEnginePerformance.hpp  OksEngine.UpdateMainMenuBar.cpp  OksEngine.UpdateMainMenuBar.hpp
Sources/Engine/ECS/: CMakeLists.txt  ECS.Common.hpp  ECS.Component.hpp  ECS.ComponentsManager.hpp  ECS.EntitiesManager.hpp  ECS.Entity.cpp  ECS.Entity.hpp  ECS.System.hpp  ECS.SystemsManager.hpp  ECS.World.hpp  ECS.hpp  TypeInfo.hpp
Sources/Engine/Geometry/: CMakeLists.txt  Geometry.Common.hpp  Geometry.Index.hpp  Geometry.IndexBuffer.hpp  Geometry.Shape.hpp  Geometry.Texture.hpp  Geometry.VertexCloud.hpp  Geometry.hpp
Sources/Engine/Libraries/: CMakeLists.txt
Sources/Engine/Lua/: CMakeLists.txt  Lua.Common.hpp  Lua.Context.hpp  Mock.cpp
Sources/Engine/Math/: CMakeLists.txt  Math.Angle.hpp  Math.Common.hpp  Math.Matrix.hpp  Math.Scalar.hpp  Math.Utils.cpp  Math.Vector.hpp  Math.hpp
Sources/Engine/Memory/: CMakeLists.txt
Sources/Engine/OS/: CMakeLists.txt  OS.Assert.cpp  OS.Assert.hpp  OS.Clock.hpp  OS.Exception.cpp  OS.Exception.hpp  OS.FileSystem.BinaryFile.hpp  OS.FileSystem.File.hpp  OS.FileSystem.TextFile.hpp  OS.FileSystem.hpp  OS.Logger.cpp  OS.Logger.hpp  OS.Profiler.hpp  OS.hpp
Sources/Engine/Physics/: CMakeLists.txt  OksEngine.CreatePhysicsShape.cpp  OksEngine.CreatePhysicsShape.hpp  OksEngine.CreateRigidBodyCustomMeshShape.cpp  OksEngine.CreateRigidBodyCustomMeshShape.hpp  OksEngine.CreateStaticRigidBody.cpp  OksEngine.CreateStaticRigidBody.hpp  OksEngine.DynamicRigidBody.hpp  OksEngine.DynamicRigidBodyBox.hpp  OksEngine.DynamicRigidBodyCapsule.hpp  OksEngine.DynamicRigidBodyCustomMeshShape.cpp  OksEngine.DynamicRigidBodyCustomMeshShape.hpp  OksEngine.Mass.cpp  OksEngine.Mass.hpp  OksEngine.Material.cpp  OksEngine.Material.hpp  OksEngine.Physics.Components.hpp  OksEngine.Physics.Subsystem.cpp  OksEngine.Physics.Subsystem.hpp  OksEngine.Physics.System.hpp  OksEngine.Physics.Systems.hpp  (+5 more)
Sources/Scripts/: AttachedCamera.lua  Camera.lua  Character.lua  Entity.lua  GrassBlock.lua  Math3D.lua  TestGameObjectLogic.lua  TestObject.lua  Vector.lua
Sources/Tests/: test_engine.cpp
Tools/ECSGenerator/: CMakeLists.txt
Tools/TgBot/: CMakeLists.txt  ECSGenerator3.ecs_project  OksEngine.ECS.Component.Utils.cpp  OksEngine.ECS.Component.Utils.hpp  ecs_generator3.ecs_project
(+2003 files in other folders)
